# playwright-automation-python

./: .gitignore  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: playwright.yml
Jenkins/: Jenkinsfile
config/: api_config.json  stg.json
page_objects/: DEMO.py  cart_page.py  checkout_page.py  confirmation_page.py  contactus_page.py  home_page.py  login_page.py  payment_page.py  products_page.py  signup_page.py  testcase_page.py
prompts/: generate_test.md  generate_test_1.md
state/: state.json
test_data/: contactus_data.py  login_data.py  payment_data.py  product_data.py  registration_data.py
tests/: test_contactus.py  test_demo.py  test_home_page.py  test_product_search.py  test_register_user.py  test_single_login_mutiple_cases.py  test_testcase_page.py  test_user_journey.py  test_user_login.py  test_user_register.py
tests/api_tests/: conftest.py  test_auth_api.py  test_brand_api.py  test_product_api.py
utils/: api_helper.py  css_assert.py  css_helper.py
